# MLFlow

./: .gitignore
local-mlflow-setup/: README.md  docker-compose.yaml
local-mlflow-setup/docker/: .dockerignore  Dockerfile  Makefile  pyproject.toml
mlflow-model-registry/: mlflow-registry-example.py
mlflow-models/: mlflow-pyfunc-example.py  mlflow-sklearn-example.py  model.py
mlflow-projects/: README.md
mlflow-projects/mlruns/0/: meta.yaml
mlflow-projects/mlruns/0/83490f02a1424147a7227f3ed424f7ab/: meta.yaml
mlflow-projects/mlruns/0/83490f02a1424147a7227f3ed424f7ab/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.git.repoURL  mlflow.source.name
mlruns/0/: meta.yaml
mlruns/377386860532745942/: meta.yaml
mlruns/377386860532745942/51bf9d59c7974e57af84cbe3fadbfbd9/: meta.yaml
mlruns/377386860532745942/51bf9d59c7974e57af84cbe3fadbfbd9/metrics/: f1_score
mlruns/377386860532745942/51bf9d59c7974e57af84cbe3fadbfbd9/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/377386860532745942/7c021b053dbd45fbaf4888793f70b266/: meta.yaml
mlruns/377386860532745942/7c021b053dbd45fbaf4888793f70b266/metrics/: f1_score
mlruns/377386860532745942/7c021b053dbd45fbaf4888793f70b266/tags/: mlflow.runName  mlflow.source.name
tracking/: REAME.md  tracking.py
