[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "MLFlow tracking server"
authors = ["Choo En Ming <chooenming@gmail.com>"]
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
psycopg2-binary = "~=2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"